Style fields for Police Blotter content view

--- a/css/style.css
+++ b/css/style.css
@@ -6756,6 +6756,10 @@ li.node-readmore,
 #block-bootstrap-sass-wsuv-help,
 .author,
 .feed-icons,
+.field--name-field-blotter-date,
+.field--name-field-blotter-activity,
+.field--name-field-blotter-location,
+.field--name-field-blotter-resolution,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-date-time,
@@ -6847,6 +6851,10 @@ li.node-readmore,
   font-weight: bold;
   margin-bottom: 1em; }
 
+.field--name-field-blotter-date,
+.field--name-field-blotter-activity,
+.field--name-field-blotter-location,
+.field--name-field-blotter-resolution,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-location,
