--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -607,6 +607,10 @@ li.node-readmore,
 #block-bootstrap-sass-wsuv-help,
 .author,
 .feed-icons,
+.field--name-field-blotter-date,
+.field--name-field-blotter-activity,
+.field--name-field-blotter-location,
+.field--name-field-blotter-resolution,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-date-time,
@@ -716,6 +720,10 @@ li.node-readmore,
   margin-bottom: 1em;
 }
 
+.field--name-field-blotter-date,
+.field--name-field-blotter-activity,
+.field--name-field-blotter-location,
+.field--name-field-blotter-resolution,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-location,
