Remove rogue border on mobile tabular views

--- a/css/style.css
+++ b/css/style.css
@@ -6793,7 +6793,7 @@ li.node-readmore,
   .view-content .messages--warning strong {
     color: #734c00; }
 
-/* HOME ALERT YELLOW WARNING */
+/* Homepage alert - warning */
 .view-content .messages--error {
   padding: 1em 1em 1em 2.5em;
   margin: -3em 0 7em 0;
@@ -6803,7 +6803,11 @@ li.node-readmore,
   .view-content .messages--error strong {
     color: #a51b00; }
 
-/* HOME ALERT RED SEVERE */
+/* Homepage alert - severe */
+.view-content .table-responsive {
+  margin-left: -25px;
+  border: none; }
+
 .view-header h2 {
   margin-left: 0; }
 
@@ -6821,6 +6825,10 @@ li.node-readmore,
 .field--item {
   color: #595959; }
 
+.views-row,
+.field--name-body {
+  margin-bottom: 1em; }
+
 .field--name-field-alert-post-date {
   margin-left: 10px;
   margin-top: -1em; }
@@ -6829,20 +6837,6 @@ li.node-readmore,
   margin-left: -15px; }
   .field--name-field-alert-full-message p {
     margin-top: 1em; }
-
-.field--name-field-news-body {
-  margin-right: 25px; }
-
-.field--name-field-news-body ul,
-.field--name-field-news-body ol,
-.field--item > ul,
-.field--item > ol {
-  margin-left: 18px;
-  margin-right: 25px; }
-
-.views-row,
-.field--name-body {
-  margin-bottom: 1em; }
 
 .field--name-field-event-date-time {
   color: #981e32;
@@ -6864,6 +6858,16 @@ li.node-readmore,
 .field--name-field-event-website {
   color: #333333;
   margin-bottom: 1em; }
+
+.field--name-field-news-body {
+  margin-right: 25px; }
+
+.field--name-field-news-body ul,
+.field--name-field-news-body ol,
+.field--item > ul,
+.field--item > ol {
+  margin-left: 18px;
+  margin-right: 25px; }
 
 .field--name-field-news-post-date {
   margin-bottom: 1em;
