Reworked navbar drop-down links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -83,22 +83,59 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
-            <li><a href="http://8dev.vancouver.wsu.edu">Admissions</a></li>
-            <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
-            <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Students</a></li>
-            <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
-            <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Resources dropdown menu">Resources <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Admissions dropdown menu">Admissions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>            
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
+                  <li><a href="https://www.applyweb.com/fixie/form/s/T7W13sd">Request info</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Students dropdown menu">Students <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z index</a></li>
+                  <li><a href="http://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
+                  <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+                  <li><a href="http://wsuv.orgsync.com/">CougSync</a></li>
+                  <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/campus-map-and-directions">Map</a></li>
+                  <li><a href="https://my.wsu.edu/">myWSU</a>
+                  <li><a href="http://wsuv.orgsync.com/">Parking</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Research dropdown menu">Research <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/research/faculty-research-and-labs">Faculty research</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/research/graduate-programs">Graduate programs</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/research">Research home</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Alumni dropdown menu">Alumni <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni home</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/giving">Give</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/alumni-relations/get-involved">Get involved</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/nw-cougar-quarterly">Publications</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Faculty/staff dropdown menu">Faculty/staff <b class="caret"></b></a>
+                <ul class="dropdown-menu">
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
-                  <li><a href="https://outlook.office365.com/owa/wsu.edu/">Email</a></li>
+                  <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a></li>
-                  <li><a href="http://office365.wsu.edu/">Office 365</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
             </li>
