--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -661,6 +661,7 @@ li.node-readmore,
 } /* Homepage alert - severe */
 
 .view-content .table-responsive {
+  margin-top: -1em;
   margin-left: -25px;
   border: none;
 }
