Modified .navbar links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -86,10 +86,11 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Admissions dropdown menu">Admissions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions">Admissions home</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>            
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
                   <li><a href="https://www.applyweb.com/fixie/form/s/T7W13sd">Request info</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
@@ -115,6 +116,7 @@
                   <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/research/faculty-research-and-labs">Faculty research</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/research/graduate-programs">Graduate programs</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/research/resources-faculty">Proposals</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/research">Research home</a></li>
                 </ul>
             </li>
@@ -122,8 +124,9 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Alumni dropdown menu">Alumni <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni home</a></li>
-                  <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/giving">Give</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/giving">Give to WSU</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/alumni-relations/get-involved">Get involved</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/naa">Notable Alumni</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/nw-cougar-quarterly">Publications</a></li>
                 </ul>
             </li>
