Minor template links tweak

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import "default-variables";
 
 // Bootstrap Framework.
-@import '/Users/brianbates1d/Sites/devdesktop/drupal-8.5.6/themes/bootstrap/assets/stylesheets/bootstrap';
+@import '/themes/bootstrap/assets/stylesheets/bootstrap';
 
 // Base-theme overrides.
 @import 'overrides';
