--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -62,7 +62,7 @@
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link rel="shortcut icon" href="http://www8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/favicon.ico" />
+    <link rel="shortcut icon" href="/themes/bootstrap_sass_wsuv/images/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <a href="#main-content" class="visually-hidden focusable skip-link">
@@ -79,14 +79,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="http://www8dev.vancouver.wsu.edu"> <a href="http://www8dev.vancouver.wsu.edu"><img class="horizontal-logo" src="http://www8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
+        <a class="navbar-brand" href="http://www8dev.vancouver.wsu.edu"> <a href="http://www8dev.vancouver.wsu.edu"><img class="horizontal-logo" src="/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Admissions dropdown menu">Admissions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions">Admissions home</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/">Admissions home</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
@@ -160,7 +160,7 @@
 
 <div class="header-logo">
   <div class="col-sm-6 col-md-6">
-    <a href="http://www8dev.vancouver.wsu.edu"><img class="primary-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
+    <a href="http://www8dev.vancouver.wsu.edu"><img class="primary-logo" src="/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
   </div>
   <div class="col-sm-6 col-md-6">
     <a class="apply-button" href="http://8dev.vancouver.wsu.edu/admissions/apply">Apply now</a>
