--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,8 @@ th {
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url("/sites/all/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.eot");
-  src: url("/sites/all/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("/sites/all/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("/sites/all/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("/sites/all/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("/sites/all/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
+  src: url("http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.eot");
+  src: url("http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
 
 .glyphicon {
   position: relative;
