--- a/css/style.css
+++ b/css/style.css
@@ -6443,8 +6443,16 @@ body > nav > div.navbar-header > button {
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:hover,
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
     text-decoration: underline; }
+  #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a {
+    border-bottom: #85001a 1px solid;
+    padding-left: 1em;
+    padding-bottom: 1em;
+    margin-right: 1em; }
   .dropdown-menu > li a {
-    margin-bottom: .7em; } }
+    margin-bottom: .7em; }
+  .navbar-default .navbar-nav > .open a.dropdown-toggle {
+    font-weight: bold;
+    padding-bottom: 1em; } }
 
 /* HEADER - logo and apply button */
 .header-logo .col-md-6 {
