--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -201,7 +201,7 @@
 			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
 			<li>&nbsp;</li>
 			<li class="sitemap-section">Current Students</li>
-			<li><a href="https://studentaffairs.vancouver.wsu.edu/">Student Affairs and Enrollment</a></li>
+			<li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z Index</a></li>
 			<li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Student Involvement</a></li>
 			<li><a href="https://studentaffairs.vancouver.wsu.edu/src">Student Resource Center</a></li>
     	</ul>
