Adjust font size on mobile drop-down header menu

--- a/css/style.css
+++ b/css/style.css
@@ -6435,6 +6435,9 @@ body > nav > div.navbar-header > button {
     margin-top: 5px;
     height: 40px;
     display: block; }
+  #bs-primary-navbar-collapse-1 {
+    font-size: 1.75em;
+    padding-bottom: 1em; }
   #bs-primary-navbar-collapse-1 > div > form {
     margin-right: 30px;
     margin-left: 15px; }
@@ -6444,15 +6447,15 @@ body > nav > div.navbar-header > button {
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
     text-decoration: underline; }
   #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a {
+    font-size: 1.25em;
     border-bottom: #85001a 1px solid;
-    padding-left: 1em;
+    padding-left: 17px;
     padding-bottom: 1em;
     margin-right: 1em; }
   .dropdown-menu > li a {
     margin-bottom: .7em; }
   .navbar-default .navbar-nav > .open a.dropdown-toggle {
-    font-weight: bold;
-    padding-bottom: 1em; } }
+    font-weight: bold; } }
 
 /* HEADER - logo and apply button */
 .header-logo .col-md-6 {
