--- a/css/style.css
+++ b/css/style.css
@@ -6384,6 +6384,10 @@ body > nav > div.navbar-header > button {
 .navbar-toggle .icon-bar {
   border-radius: 0; }
 
+.navbar-toggle {
+  margin-right: 5px;
+  padding-left: 2em; }
+
 #bs-primary-navbar-collapse-1 > div > form {
   margin-right: 20px; }
 
@@ -6436,22 +6440,25 @@ body > nav > div.navbar-header > button {
     height: 40px;
     display: block; }
   #bs-primary-navbar-collapse-1 {
-    font-size: 1.75em;
+    font-size: 1.5em;
     padding-bottom: 1em; }
   #bs-primary-navbar-collapse-1 > div > form {
-    margin-right: 30px;
-    margin-left: 15px; }
-  #bs-primary-navbar-collapse-1 .input-group {
-    padding-left: 0; }
+    margin: 1.25em 15px 0 15px; }
+  #bs-primary-navbar-collapse-1 > ul > li:nth-child(1) > a {
+    margin-top: 1em; }
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:hover,
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
     text-decoration: underline; }
   #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a {
     font-size: 1.25em;
     border-bottom: #85001a 1px solid;
-    padding-left: 17px;
+    padding-left: .8em;
     padding-bottom: 1em;
     margin-right: 1em; }
+  #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li:nth-child(1) > a {
+    margin-top: .25em; }
+  #bs-primary-navbar-collapse-1 .input-group {
+    padding-left: 0; }
   .dropdown-menu > li a {
     margin-bottom: .7em; }
   .navbar-default .navbar-nav > .open a.dropdown-toggle {
