--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -163,6 +163,11 @@ body > nav > div.navbar-header > button {
   border-radius: 0;
 }
 
+.navbar-toggle {
+  margin-right: 5px;
+  padding-left: 2em;
+}
+
 #bs-primary-navbar-collapse-1 > div > form {
   margin-right: 20px;
 }
@@ -226,15 +231,14 @@ body > nav > div.navbar-header > button {
     display: block;
   }
   #bs-primary-navbar-collapse-1 {
-    font-size: 1.75em;
+    font-size: 1.5em;
     padding-bottom: 1em;
   }
   #bs-primary-navbar-collapse-1 > div > form {
-    margin-right: 30px;
-    margin-left: 15px;
+    margin: 1.25em 15px 0 15px;
   }
-  #bs-primary-navbar-collapse-1 .input-group {
-    padding-left: 0;
+  #bs-primary-navbar-collapse-1 > ul > li:nth-child(1) > a {
+    margin-top: 1em;
   }
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:hover,
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
@@ -243,9 +247,15 @@ body > nav > div.navbar-header > button {
   #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a {
     font-size: 1.25em;
     border-bottom: #85001a 1px solid;
-    padding-left: 17px;
+    padding-left: .8em;
     padding-bottom: 1em;
     margin-right: 1em;
+  }
+  #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li:nth-child(1) > a {
+    margin-top: .25em;
+  }
+  #bs-primary-navbar-collapse-1 .input-group {
+    padding-left: 0;
   }
   .dropdown-menu > li a {
     margin-bottom: .7em;
