Reset overly ambitious table max-width

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -618,8 +618,8 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 }
 
 .region-content table {
-  max-width: 87%;
-} /* Prevent tables from invading secondary block region on wide layouts */
+  max-width: 98%;
+}
 
 h1.page-header,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote,
