Align <th> with <td> in table views

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -689,6 +689,10 @@ li.node-readmore,
   border: none;
 }
 
+.view-content .table-responsive th {
+  padding-left: 15px;
+}
+
 .view-header h2 {
   margin-left: 0;
 }
