--- a/css/style.css
+++ b/css/style.css
@@ -6825,6 +6825,9 @@ li.node-readmore,
   margin-left: -25px;
   border: none; }
 
+.view-content .table-responsive th {
+  padding-left: 15px; }
+
 .view-header h2 {
   margin-left: 0; }
 
