Change webform width to 80% on 992px max

--- a/css/style.css
+++ b/css/style.css
@@ -1063,7 +1063,7 @@ th {
 
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 body {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
@@ -5500,7 +5500,7 @@ button.close {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  background-color: transparent; }
+  background-color: rgba(0, 0, 0, 0); }
   .carousel-control.left {
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
@@ -5569,7 +5569,7 @@ button.close {
     border-radius: 10px;
     cursor: pointer;
     background-color: #000 \9;
-    background-color: transparent; }
+    background-color: rgba(0, 0, 0, 0); }
   .carousel-indicators .active {
     margin: 0;
     width: 12px;
@@ -7097,7 +7097,7 @@ h2.hero-title {
 
 @media (max-width: 991.99px) {
   .region-content form {
-    max-width: 70%; } }
+    max-width: 80%; } }
 
 @media (max-width: 767.99px) {
   .region-content form {
