--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1006,6 +1006,28 @@ h2.hero-title {
   }
 }
 
+form label {
+  font-weight: normal;
+}
+
+form .panel {
+  box-shadow: none;
+}
+
+form .panel-default {
+  border: none;
+  padding: none;
+}
+
+form .panel-heading{
+  display: none;
+}
+
+form .panel-body {
+  padding: 0;
+  border: none;
+}
+
 .form-control {
   box-shadow: none;
 }
